# ecom_server

./: .todo  Dockerfile  docker-compose.yaml  pyproject.toml
app/: .env.example  prestart.sh  run_main.py
app/_gunicorn/: __init__.py  application.py  config.py
app/src/: config.py  main.py
app/src/database/: __init__.py  config.py  deps.py  pool.py
app/src/features/categories/: deps.py  error_messages.py  repo.py  router.py  schemas.py  service.py
app/src/features/product/: router.py  service.py
app/src/features/products/: deps.py  error_messages.py  repo.py  router.py  schemas.py  service.py
app/src/features/user_products/last_seen/: deps.py  repo.py  router.py  schemas.py  service.py
app/src/routers/: __init__.py  config.py  v1.py
app/src/schema/: __init__.py
app/src/service/: base.py
app/src/service/exceptions/: __init__.py  exceptions.py  handler.py  messages.py  types.py
migrations/: 20260126_01_pc9rr-create-products-table.sql  20260127_01_igbxa-create-category-table.sql  20260220_01_60x30-create-last-seen-products.sql  20260222_01_l6ish-create-category-tab.sql  20260222_02_tyrq6-create-product-tab.sql  20260222_03_davcf-create-last-seen-products-tab.sql
